==> louisthomaspro/badgeuse-polytech/Firmware/Src/MFRC522.c <==
#include "MFRC522.h"

void PCD_WriteRegister(uint8_t reg, uint8_t value)
{
	uint8_t rxBuffer[2] = {reg, value};
	MFRC522_CS_LOW
	HAL_SPI_Transmit(MFRC522_SPI_HANDLE, rxBuffer, 2, MFRC522_SPI_TIMEOUT);
	MFRC522_CS_HIGH
}

uint8_t PCD_ReadRegister(uint8_t reg)
{
	uint8_t txBuffer[2] = {0x80 | reg, 0};
	uint8_t rxBuffer[2] = {0};

	MFRC522_CS_LOW
	HAL_SPI_TransmitReceive(MFRC522_SPI_HANDLE, txBuffer, rxBuffer, 2, MFRC522_SPI_TIMEOUT);
	MFRC522_CS_HIGH
	return rxBuffer[1];
}

void PCD_Init()
{
	uint8_t hardReset = 0;
	GPIO_InitTypeDef GPIO_InitStruct = {0};
	MFRC522_CS_HIGH

	HAL_GPIO_DeInit(MFRC522_RST_GPIO_PORT, MFRC522_RST_PIN);
	GPIO_InitStruct.Pin = MFRC522_RST_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	HAL_GPIO_Init(MFRC522_RST_GPIO_PORT, &GPIO_InitStruct);

	delay_CYC(US_TO_CYC(50));

	if(HAL_GPIO_ReadPin(MFRC522_RST_GPIO_PORT, MFRC522_RST_PIN) == 0)
	{
		GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
		HAL_GPIO_Init(MFRC522_RST_GPIO_PORT, &GPIO_InitStruct);

		HAL_GPIO_WritePin(MFRC522_RST_GPIO_PORT, MFRC522_RST_PIN, GPIO_PIN_RESET);
		delay_CYC(US_TO_CYC(2));
		HAL_GPIO_WritePin(MFRC522_RST_GPIO_PORT, MFRC522_RST_PIN, GPIO_PIN_SET);

		delay_CYC(US_TO_CYC(50));
		hardReset = 1;
	}
	if (!hardReset) { // Perform a soft reset if we haven't triggered a hard reset above.
		PCD_Reset();
	}

	// Reset baud rates
	PCD_WriteRegister(TX_MODE_REG, 0x00);
	PCD_WriteRegister(RX_MODE_REG, 0x00);
	// Reset ModWidthReg
	PCD_WriteRegister(MOD_WIDTH_REG, 0x26);

	// When communicating with a PICC we need a timeout if something goes wrong.
	// f_timer = 13.56 MHz / (2*TPreScaler+1) where TPreScaler = [TPrescaler_Hi:TPrescaler_Lo].
	// TPrescaler_Hi are the four low bits in TModeReg. TPrescaler_Lo is TPrescalerReg.
	PCD_WriteRegister(T_MODE_REG, 0x80);			// TAuto=1; timer starts automatically at the end of the transmission in all communication modes at all speeds
	PCD_WriteRegister(T_PRESCALER_REG, 0xA9);		// TPreScaler = TModeReg[3..0]:TPrescalerReg, ie 0x0A9 = 169 => f_timer=40kHz, ie a timer period of 25μs.
	PCD_WriteRegister(T_RELOAD_REG_H, 0x03);		// Reload timer with 0x3E8 = 1000, ie 25ms before timeout.
	PCD_WriteRegister(T_RELOAD_REG_L, 0xE8);

	PCD_WriteRegister(TX_ASK_REG, 0x40);		// Default 0x00. Force a 100 % ASK modulation independent of the ModGsPReg register setting
	PCD_WriteRegister(MODE_REG, 0x3D);		// Default 0x3F. Set the preset value for the CRC coprocessor for the CalcCRC command to 0x6363 (ISO 14443-3 part 6.2.4)
	PCD_AntennaOn();						// Enable the antenna driver pins TX1 and TX2 (they were disabled by the reset)
}

void PCD_Reset()
{
	PCD_WriteRegister(COMMAND_REG, PCD_SOFT_RESET_CMD);	// Issue the SoftReset command.
	// The datasheet does not mention how long the SoftRest command takes to complete.
	// But the MFRC522 might have been in soft power-down mode (triggered by bit 4 of CommandReg)
	// Section 8.8.2 in the datasheet says the oscillator start-up time is the start up time of the crystal + 37,74μs. Let us be generous: 50ms.
	uint8_t count = 0;
	do {
		// Wait for the PowerDown bit in CommandReg to be cleared (max 3x50ms)
		delay_CYC(US_TO_CYC(50));
	} while ((PCD_ReadRegister(COMMAND_REG) & (1 << 4)) && (++count) < 3);
	if(count==3)
		__asm__ __volatile__ ("bkpt #0");
}

uint8_t PCD_CommunicateWithPICC(uint8_t command, uint8_t waitIRq, uint8_t *sendData, uint8_t sendLen, uint8_t *backData, uint8_t *backLen, uint8_t *validBits, uint8_t rxAlign, uint8_t checkCRC)
{
	// Prepare values for BitFramingReg
	uint8_t txLastBits = validBits ? *validBits : 0;
	uint8_t bitFraming = (rxAlign << 4) + txLastBits;		// RxAlign = BitFramingReg[6..4]. TxLastBits = BitFramingReg[2..0]
	uint32_t ref;


	PCD_WriteRegister(COMMAND_REG, PCD_IDLE_CMD);			// Stop any active command.
	PCD_WriteRegister(COM_IRQ_REG, 0x7F);					// Clear all seven interrupt request bits
	PCD_WriteRegister(FIFO_LEVEL_REG, 0x80);				// FlushBuffer = 1, FIFO initialization
	PCD_WriteRegister_ext(FIFO_DATA_REG, sendLen, sendData);	// Write sendData to the FIFO
	PCD_WriteRegister(BIT_FRAMING_REG, bitFraming);		// Bit adjustments
	PCD_WriteRegister(COMMAND_REG, command);				// Execute the command
	if (command == PCD_TRANSCEIVE_CMD) {
		PCD_SetRegisterBitMask(BIT_FRAMING_REG, 0x80);	// StartSend=1, transmission of data starts
	}

	// Wait for the command to complete.
	// In PCD_Init() we set the TAuto flag in TModeReg. This means the timer automatically starts when the PCD stops transmitting.
	uint8_t pcdComSuccess=0;
	mark_CYC_Timer(&ref);
	while(CYC_TO_US(elapsed_CYC_Timer(ref))<40000) { //40 ms timeout
		uint8_t n = PCD_ReadRegister(COM_IRQ_REG);	// ComIrqReg[7..0] bits are: Set1 TxIRq RxIRq IdleIRq HiAlertIRq LoAlertIRq ErrIRq TimerIRq
		if (n & waitIRq) {					// One of the interrupts that signal success has been set.
			pcdComSuccess=1;
			break;
		}
		if (n & 0x01) {						// Timer interrupt - nothing received in 25ms
			pcdComSuccess=1;
			return STATUS_TIMEOUT;
		}
	}
	// 40ms and nothing happend. Communication with the MFRC522 might be down.
	if (!pcdComSuccess) {
		//__asm__ __volatile__ ("bkpt #0");
		return STATUS_TIMEOUT;
	}

	// Stop now if any errors except collisions were detected.
	uint8_t errorRegValue = PCD_ReadRegister(ERROR_REG); // ErrorReg[7..0] bits are: WrErr TempErr reserved BufferOvfl CollErr CRCErr ParityErr ProtocolErr
	if (errorRegValue & 0x13) {	 // BufferOvfl ParityErr ProtocolErr
		return STATUS_ERROR;
	}

	uint8_t _validBits = 0;

	// If the caller wants data back, get it from the MFRC522.
	if (backData && backLen) {
		uint8_t n = PCD_ReadRegister(FIFO_LEVEL_REG);	// Number of bytes in the FIFO
		if (n > *backLen) {
			return STATUS_NO_ROOM;
		}
		*backLen = n;											// Number of bytes returned
		PCD_ReadRegister_ext(FIFO_DATA_REG, n, backData, rxAlign);	// Get received data from FIFO
		_validBits = PCD_ReadRegister(CONTROL_REG) & 0x07;		// RxLastBits[2:0] indicates the number of valid bits in the last received byte. If this value is 000b, the whole byte is valid.
		if (validBits) {
			*validBits = _validBits;
		}
	}

	// Tell about collisions
	if (errorRegValue & 0x08) {		// CollErr
		return STATUS_COLLISION;
	}

	// Perform CRC_A validation if requested.
	if (backData && backLen && checkCRC) {
		// In this case a MIFARE Classic NAK is not OK.
		if (*backLen == 1 && _validBits == 4) {
			return STATUS_MIFARE_NACK;
		}
		// We need at least the CRC_A value and all 8 bits of the last byte must be received.
		if (*backLen < 2 || _validBits != 0) {
			return STATUS_CRC_WRONG;
		}
		// Verify CRC_A - do our own calculation and store the control in controlBuffer.
		uint8_t controlBuffer[2];
		uint8_t status = PCD_CalculateCRC(&backData[0], *backLen - 2, &controlBuffer[0]);
		if (status != STATUS_OK) {
			return status;
		}
		if ((backData[*backLen - 2] != controlBuffer[0]) || (backData[*backLen - 1] != controlBuffer[1])) {
			return STATUS_CRC_WRONG;
		}
	}

	return STATUS_OK;
}

uint8_t PICC_IsNewCardPresent()
{
	uint8_t bufferATQA[2];
	uint8_t bufferSize = sizeof(bufferATQA);

	// Reset baud rates
	PCD_WriteRegister(TX_MODE_REG, 0x00);
	PCD_WriteRegister(RX_MODE_REG, 0x00);
	// Reset ModWidthReg
	PCD_WriteRegister(MOD_WIDTH_REG, 0x26);

	uint8_t result = PICC_RequestA(bufferATQA, &bufferSize);
	return (result == STATUS_OK || result == STATUS_COLLISION);
}
